--- a/rest-demo/pom.xml
+++ b/rest-demo/pom.xml
@@ -39,9 +39,9 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.24</version> <!-- Choose the version that fits your needs -->
 		</dependency>
 
 		<dependency>
