--- a/rest-demo/src/main/resources/application.yaml
+++ b/rest-demo/src/main/resources/application.yaml
@@ -6,10 +6,10 @@
 #    password: 1234
 spring:
   datasource:
-    url: jdbc:mysql://sql7.freemysqlhosting.net/sql7742211?useSSL=false
-    username: sql7742211
-    password: 8rWqFEQDhs
-
-
-  #JPA SETTINGS
-  jpa.hibernate.ddl_auto: update
+    url: jdbc:postgresql://localhost:8080/olympus_riviera?useSSL-false
+    username: your_username
+    password: your_password
+  jpa:
+    hibernate:
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
