New Hosted Database

--- a/rest-demo/src/main/resources/application.properties
+++ b/rest-demo/src/main/resources/application.properties
@@ -6,8 +6,11 @@
 #server.port=8080
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/olympus_riviera?ssl=false
-spring.datasource.url=jdbc:postgresql://ep-divine-violet-a21u7316.eu-central-1.aws.neon.tech/olympus_riviera?user=olympus_riviera_owner&password=wHa8KvuZNf7e&sslmode=require
+#spring.datasource.url=jdbc:postgresql://ep-divine-violet-a21u7316.eu-central-1.aws.neon.tech/olympus_riviera?user=olympus_riviera_owner&password=wHa8KvuZNf7e&sslmode=require
+spring.datasource.url=jdbc:postgresql://195.251.210.147:8881/postgres?ssl=false
+spring.datasource.username=admin
+spring.datasource.password=9GKSM9wD356VfQ6
 #spring.datasource.username=postgres
 #spring.datasource.password=olympus_riviera
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
