--- a/rest-demo/src/main/resources/application.properties
+++ b/rest-demo/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.datasource.username=admin
 spring.datasource.password=9GKSM9wD356VfQ6
 
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
