--- a/rest-demo/src/main/resources/application.yaml
+++ b/rest-demo/src/main/resources/application.yaml
@@ -17,4 +17,4 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-#    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
