Approval Updates and Changed DB

--- a/rest-demo/src/main/resources/application.properties
+++ b/rest-demo/src/main/resources/application.properties
@@ -11,12 +11,12 @@
 #spring.datasource.password=olympus_riviera
 
 #-----------------------------neon--------------------------------------
-spring.datasource.url=jdbc:postgresql://ep-divine-violet-a21u7316.eu-central-1.aws.neon.tech/olympus_riviera?user=olympus_riviera_owner&password=wHa8KvuZNf7e&sslmode=require
+#spring.datasource.url=jdbc:postgresql://ep-divine-violet-a21u7316.eu-central-1.aws.neon.tech/olympus_riviera?user=olympus_riviera_owner&password=wHa8KvuZNf7e&sslmode=require
 
 #-----------------------------Pamak-------------------------------------
-#spring.datasource.url=jdbc:postgresql://195.251.210.147:8881/postgres?ssl=false
-#spring.datasource.username=admin
-#spring.datasource.password=9GKSM9wD356VfQ6
+spring.datasource.url=jdbc:postgresql://195.251.210.147:8881/postgres?ssl=false
+spring.datasource.username=admin
+spring.datasource.password=9GKSM9wD356VfQ6
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
