--- a/rest-demo/src/main/resources/application.properties
+++ b/rest-demo/src/main/resources/application.properties
@@ -6,12 +6,12 @@
 #server.port=8080
 
 #----------------------------localhost----------------------------------------
-spring.datasource.url=jdbc:postgresql://localhost:5432/olympus_riviera?ssl=false
-spring.datasource.username=postgres
-spring.datasource.password=olympus_riviera
+#spring.datasource.url=jdbc:postgresql://localhost:5432/olympus_riviera?ssl=false
+#spring.datasource.username=postgres
+#spring.datasource.password=olympus_riviera
 
 #-----------------------------neon--------------------------------------
-#spring.datasource.url=jdbc:postgresql://ep-divine-violet-a21u7316.eu-central-1.aws.neon.tech/olympus_riviera?user=olympus_riviera_owner&password=wHa8KvuZNf7e&sslmode=require
+spring.datasource.url=jdbc:postgresql://ep-divine-violet-a21u7316.eu-central-1.aws.neon.tech/olympus_riviera?user=olympus_riviera_owner&password=wHa8KvuZNf7e&sslmode=require
 
 #-----------------------------Pamak-------------------------------------
 #spring.datasource.url=jdbc:postgresql://195.251.210.147:8881/postgres?ssl=false
