--- a/rest-demo/src/main/resources/application.yaml
+++ b/rest-demo/src/main/resources/application.yaml
@@ -6,10 +6,10 @@
 #    password: 1234
 spring:
   datasource:
-      url: jdbc:postgresql://localhost:5432/api?ssl=false
-      username: postgres
-      password: olympus_riviera
-#      url: jdbc:postgresql://ep-divine-violet-a21u7316.eu-central-1.aws.neon.tech/olympus_riviera?user=olympus_riviera_owner&password=wHa8KvuZNf7e&sslmode=require
+      #url: jdbc:postgresql://localhost:5432/api?ssl=false
+      #username: postgres
+      #password: olympus_riviera
+url: jdbc:postgresql://ep-divine-violet-a21u7316.eu-central-1.aws.neon.tech/olympus_riviera?user=olympus_riviera_owner&password=wHa8KvuZNf7e&sslmode=require
 
 #    url: jdbc:postgresql://195.251.210.147:8881/postgres?ssl=false
 #    username: admin
